# trowel

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
examples/: draw_ferris.rs  hello_world.rs  maze.rs  multiplayer.rs  raycaster.rs  read_file.rs  write_file.rs
examples/bresenham/: main.rs
examples/celeste/: main.rs
examples/moving-box/: main.rs
examples/topdown/: main.rs
html/: index.html
master/: crates.js  help.html  search-index.js  settings.html  source-files.js
master/adler32/: all.html  fn.adler32.html  index.html  sidebar-items.js  struct.RollingAdler32.html
master/aliasable/: all.html  index.html  sidebar-items.js  struct.AliasableMut.html
master/az/: all.html  fn.cast.html  fn.checked_cast.html  fn.overflowing_cast.html  fn.saturating_cast.html  fn.unwrapped_cast.html  fn.wrapping_cast.html  index.html  struct.Round.html  trait.Az.html  trait.Cast.html  trait.CastFrom.html  trait.CheckedAs.html  trait.CheckedCast.html  trait.CheckedCastFrom.html  trait.OverflowingAs.html  trait.OverflowingCast.html  trait.OverflowingCastFrom.html  trait.SaturatingAs.html  trait.SaturatingCast.html  trait.SaturatingCastFrom.html  trait.UnwrappedAs.html  trait.UnwrappedCast.html  trait.UnwrappedCastFrom.html  trait.WrappingAs.html  trait.WrappingCast.html  trait.WrappingCastFrom.html
master/bytemuck/: all.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.pod_read_unaligned.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  fn.try_pod_read_unaligned.html  index.html  macro.offset_of.html  trait.AnyBitPattern.html  trait.Contiguous.html  trait.NoUninit.html  trait.Pod.html  trait.PodInOption.html  trait.TransparentWrapper.html  trait.Zeroable.html  trait.ZeroableInOption.html
master/color_quant/: all.html  index.html  struct.NeuQuant.html
master/critical_section/: all.html  fn.acquire.html  fn.release.html  fn.with.html  index.html  macro.set_impl.html  sidebar-items.js  struct.CriticalSection.html  struct.Mutex.html  struct.RestoreState.html  trait.Impl.html  type.RawRestoreState.html
master/crossbeam_channel/: index.html
master/crossbeam_deque/: enum.Steal.html  index.html  struct.Injector.html  struct.Stealer.html
master/crossbeam_epoch/: fn.default_collector.html  fn.is_pinned.html  fn.pin.html  index.html  struct.Atomic.html  struct.Owned.html
master/deflate/: all.html  enum.Compression.html  enum.MatchingType.html  enum.SpecialOptions.html  fn.deflate_bytes.html  fn.deflate_bytes_conf.html  fn.deflate_bytes_zlib.html  fn.deflate_bytes_zlib_conf.html  index.html  sidebar-items.js  struct.CompressionOptions.html
master/either/: enum.Either.html
master/embedded_alloc/: all.html  index.html  sidebar-items.js  struct.Heap.html
master/embedded_dma/: all.html  index.html  sidebar-items.js  trait.ReadBuffer.html  trait.ReadTarget.html  trait.Word.html  trait.WriteBuffer.html  trait.WriteTarget.html
master/embedded_fps/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.FPS.html  struct.StdClock.html
master/embedded_graphics/: all.html  index.html  sidebar-items.js  struct.Pixel.html  trait.Drawable.html
master/embedded_graphics_core/: all.html  index.html  sidebar-items.js  struct.Pixel.html  trait.Drawable.html
master/embedded_graphics_framebuf/: all.html  index.html  sidebar-items.js  struct.FrameBuf.html  struct.PixelIterator.html
master/embedded_graphics_simulator/: all.html  enum.BinaryColorTheme.html  enum.SimulatorEvent.html  index.html  sidebar-items.js  struct.OutputImage.html  struct.OutputSettings.html  struct.OutputSettingsBuilder.html  struct.SimulatorDisplay.html  struct.Window.html
master/embedded_hal/: all.html  index.html  sidebar-items.js  trait.PwmPin.html
master/embedded_time/: all.html  enum.ConversionError.html  enum.TimeError.html  index.html  sidebar-items.js  struct.Instant.html  trait.TimeInt.html
master/float_cmp/: all.html  index.html  macro.approx_eq.html  macro.assert_approx_eq.html  sidebar-items.js  struct.F32Margin.html  struct.F64Margin.html  trait.ApproxEq.html  trait.ApproxEqRatio.html  trait.ApproxEqUlps.html  trait.Ulps.html
master/genio/: all.html  index.html  sidebar-items.js  trait.ExtendFromReader.html  trait.ExtendFromReaderSlow.html  trait.Read.html  trait.ReadOverwrite.html  trait.Write.html
master/gif/: all.html  enum.Block.html  enum.ColorOutput.html  enum.Decoded.html  enum.DecodingError.html  enum.DisposalMethod.html  enum.EncodingError.html  enum.Extension.html  enum.ExtensionData.html  enum.Extensions.html  enum.Repeat.html  enum.Version.html  index.html  sidebar-items.js  struct.AnyExtension.html  struct.DecodeOptions.html  struct.Decoder.html  struct.DecodingFormatError.html  struct.Encoder.html  struct.Frame.html  struct.MemoryLimit.html  struct.StreamingDecoder.html
master/hash32/: all.html  index.html  struct.BuildHasherDefault.html  struct.FnvHasher.html  struct.Murmur3Hasher.html  trait.BuildHasher.html  trait.Hash.html  trait.Hasher.html
master/heapless/: all.html  enum.Entry.html  index.html  struct.Deque.html  struct.HistoryBuffer.html  struct.IndexMap.html  struct.IndexSet.html  struct.LinearMap.html  struct.OccupiedEntry.html  struct.OldestOrdered.html  struct.String.html  struct.VacantEntry.html  struct.Vec.html  type.FnvIndexMap.html  type.FnvIndexSet.html
master/image/: all.html  enum.ColorType.html  enum.DynamicImage.html  enum.ExtendedColorType.html  enum.ImageFormat.html  enum.ImageOutputFormat.html  fn.guess_format.html  fn.image_dimensions.html  fn.load.html  fn.load_from_memory.html  fn.load_from_memory_with_format.html  fn.open.html  fn.save_buffer.html  index.html  sidebar-items.js  (+27 more)
src/: buffered.rs  flipped.rs  fps.rs  fs.rs  lib.rs  pc.rs  runty8.rs  sprig.rs  wasm.rs
trowel-macro/: Cargo.toml
(+6370 files in other folders)
