[package]
authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "trowel"
version = "0.0.1"

[dependencies]
bitflags = "1.3.2"
micromath = "2.0.0"
# runty8-core = { version = "0.1.0", path = "../runty8/src/runty8-core", optional = true, default-features = false }
runty8-core = { git = "https://github.com/shanecelis/runty8.git", branch = "feature-no-std", optional = true, default-features = false }
embedded-alloc = "0.5.0"
[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
embedded-graphics-simulator = "0.4.1"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt", "critical-section-impl", "disable-intrinsics"] }
# rp2040-hal = { version = "0.8.0", features=["rt", "critical-section-impl"] }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }
st7735-lcd = "0.8"
fugit = "0.3.6"

[dependencies.embedded-graphics]
version = "0.7"
optional = true

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[build-dependencies]
include_dir = { version = "0.7.3" }

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
runty8 = ["dep:runty8-core"]

[[example]]
name = "bresenham"
required-features = ["runty8"]

[[example]]
name = "moving-box"
required-features = ["runty8"]

[[example]]
name = "celeste"
required-features = ["runty8"]
