[package]
authors = ["Shane Celis <shane.celis@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "trowel"
version = "1.0.0"

[dependencies]
bitflags = "1.3.2"
micromath = "2.0.0"
# runty8-core = { version = "0.1.0", path = "../runty8/src/runty8-core", optional = true, default-features = false }
runty8-core = { git = "https://github.com/shanecelis/runty8.git", branch = "feature-no-std", optional = true, default-features = false }
embedded-alloc = "0.5.0"
embedded-graphics-framebuf = "0.2.0"
embedded-graphics = { version = "0.7.1" }
embedded-time = "0.12.1"
rtic-monotonic = "1.0.0"
try_default = { git = "https://github.com/shanecelis/try_default.git", default-features = false }
usbd-serial = "0.1"
usb-device = "0.2.9"
tinybmp = { version = "0.4.0", optional = true }
heapless = "0.7.16"
trowel-macro = { version = "0.1.0", path = "trowel-macro" }
hash32 = "0.2.1"
embedded-sdmmc = { version = "0.4.0", optional = true }
[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
genio = { version = "0.2.1" }
embedded-graphics-simulator = "0.4.1"
embedded-fps = { version = "0.1.0", features=["std"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
rp-pico = { version = "0.7.0", git = "https://github.com/shanecelis/rp-hal-boards.git", features = ["rtic-monotonic"] }
circular-buffer = { version = "0.1.1", default-features = false }
genio = { version = "0.2.1", default-features = false }
embedded-fps = "0.1.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# panic-halt = "0.2.0"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt", "critical-section-impl", "disable-intrinsics", "rtic-monotonic"] }
# rp2040-hal = { version = "0.8.0", features=["rt", "critical-section-impl"] }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }
st7735-lcd = "0.8"
embedded-sdmmc = { git = "https://github.com/UserJHansen/embedded-sdmmc-rs/", branch="main"}
shared-bus = { version = "0.2.5", features=["cortex-m"] }
fugit = "0.3.6"

[target.'cfg(target_family = "wasm")'.dependencies]
embedded-fps = { version = "0.1.0", features=["std"] }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1" , optional = true }
wasm-timer = "0.2.5"
[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'KeyboardEvent',
  'ImageData',
  'Node',
  'Window',
]

[patch.crates-io]
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = false

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[build-dependencies]
include_dir = { version = "0.7.3" }

[features]
default = ["console_error_panic_hook"]
runty8 = ["dep:runty8-core"]
bmp = ["tinybmp"]
sdcard = ["dep:embedded-sdmmc"]

[[example]]
name = "bresenham"
required-features = ["runty8"]

[[example]]
name = "moving-box"
required-features = ["runty8"]

[[example]]
name = "celeste"
required-features = ["runty8"]

[[example]]
name = "read_file"

[[example]]
name = "write_file"

[[example]]
name = "maze"

[[example]]
name = "topdown"
required-features = ["bmp"]
